# bbclean-xzero450

./: .gitignore  .gitmodules  README.txt
BlackboxZero/: CMakeLists.txt  README.TXT  build_all_vs2012.bat  build_all_vs2012_xp.bat  build_build.bat  build_clean.bat  build_installer.bat  build_pack.bat  run_generator_vs2012_devel_build.bat
BlackboxZero/blackbox/: BB.h  BBApi.cpp  BBApi.h  BBApiPluginloader.h  BBRoot.cpp  BBSendData.h  BBVWM.cpp  BBVWM.h  BImage.cpp  BImage.h  Blackbox.cpp  CMakeLists.txt  ConfigMenu.cpp  Desk.cpp  DesktopMenu.cpp  DrawText.cpp  DrawText.h  MessageManager.cpp  Settings.cpp  Settings.h  StyleItem.h  Stylestruct.h  Toolbar.cpp  Tray.cpp  Utils.cpp  Workspaces.cpp  Workspaces.h  resource.rc  worker.h
BlackboxZero/blackbox/Menu/: CommandItem.cpp  Contextmenu.cpp  Menu.cpp  Menu.h  MenuItem.cpp  MenuMaker.cpp  RecentItem.cpp  RecentItem.h  ResultItemAction.h  SearchItem.cpp  SearchItem.h  SpecialFolder.cpp  TitleItem.cpp
BlackboxZero/blackbox/PluginManager/: PluginLoaderNative.cpp  PluginManager.cpp  Types.h
BlackboxZero/blackbox/Search/: complete.cpp  config.h  find.h  history.h  index.cpp  index.h  jobmanager.h  lookup.cpp  lookup.h  rc.cpp  rc.h  search.h  serialize.h  unicode.h  worker.h
BlackboxZero/config/: blackbox.rc  extensions.rc  menu.rc  plugins.rc  search.rc
BlackboxZero/docs/: bbZero.txt
BlackboxZero/installer/: blackbox.nsi
BlackboxZero/lib/: CMakeLists.txt  bblib.h  bbrc.c  bbrc.h  bbshell.h  moreutils.c  pidl.c  strings.c  styleprops.c  styleprops.h  winutils.c
BlackboxZero/lib2/: CMakeLists.txt  StyleItem.h  bblib2.h  bblibapi.h  bbrc.cpp  bbrc.h  colors.cpp  colors.h  memory.h  numbers.h  strings.h  styleprops.cpp  styleprops.h  tinylist.h  winutils.cpp  winutils.h
BlackboxZero/pluginloaders/wow64adapter/: CMakeLists.txt  Debug.cpp  Debug.h  WOW64Adapter.cpp  WOW64Adapter.h
BlackboxZero/plugins/BB8Ball/: BB8Ball.cpp  BB8Ball.h  CMakeLists.txt  Resource.aps
BlackboxZero/plugins/BBAnalogEx/: CMakeLists.txt  bbanalogex.cpp  bbanalogex.h
BlackboxZero/plugins/BBCalendar/: bbcalendar.cpp  bbcalendar.h
BlackboxZero/plugins/BBColorEx/: BBColorEx.cpp  CMakeLists.txt
BlackboxZero/plugins/BBDigitalEx/: bbdigitalex.cpp
BlackboxZero/plugins/BBMagnify/: bbmagnify.cpp
BlackboxZero/plugins/BBMessageBox/: BBMessageBox.cpp
BlackboxZero/plugins/BBRSS/: bbrss.cpp
BlackboxZero/plugins/BBStyle/: BBStyle.cpp  BBStyle.h  BBStyle.html  bbStyle_private.rc  bbstyle.rc
BlackboxZero/plugins/BBSysMeter/: bbsysmeter.cpp
BlackboxZero/plugins/BBXO/: CMakeLists.txt  bbxo.cpp
BlackboxZero/plugins/BlackboxBar/: BlackBoxBar.rc  BlackboxBar.cpp  BuffBmp.cpp  CMakeLists.txt  TinyDropTarg.cpp  bbLeanClasses.cpp
BlackboxZero/plugins/LeanBar2/: bbplusplus.h  leanbar.cpp  plugin.cpp
BlackboxZero/plugins/bbAnalog/: bbAnalog.rc
BlackboxZero/plugins/bbAnalogExMod/: BBAnalogExMod.cpp  BBAnalogExMod.h  BBApi.h  CMakeLists.txt
BlackboxZero/plugins/bbCmd/: BBCmd.h  CMakeLists.txt  Config.h  bbCmd.cpp  plugin.cpp  plugin.h  utils.cpp  utils.h
BlackboxZero/plugins/bbColor3dc/: CMakeLists.txt
BlackboxZero/plugins/bbDesktop/: CMakeLists.txt  DesktopIcon.hpp  DrawIcons.cpp  DrawIcons.h  IconManager.hpp  Utils.h  bbDesktop.cbp  bbDesktop.rc  bbPlugin.cpp  configfile.cpp  convert.hpp  icons.rc  makefile  stringutils.cpp
BlackboxZero/plugins/bbFooMan/: BBApi.h  CMakeLists.txt  bbFooman.txt  bbFoomanInt.rc  bbf_settings.cpp  bbfooman.cpp  bbfooman.h  bbfooman.rc  foomes.h  gdiplus.h  make.bat
BlackboxZero/plugins/bbFoomp/: CMakeLists.txt
BlackboxZero/plugins/bbIME/: BBIME.cpp  CMakeLists.txt  bbIME.cbp  makefile  readme.txt
BlackboxZero/plugins/bbIconBox/: Utils.cpp  bbIconBox.cpp  bbIconBox.h  bbIconBox.rc
BlackboxZero/plugins/bbInterface/: AgentType_CompoundText.cpp  AgentType_Mixer_Vista.cpp  AgentType_Mixer_Vista.h  AgentType_Mixer_XP.cpp  AgentType_Winamp.cpp  CMakeLists.txt  ConfigMaster.h  ModuleMaster.h  StyleMaster.cpp  Tooltip.cpp  WindowMaster.cpp  WindowMaster.h
BlackboxZero/plugins/bbInterface_iTunes/: CMakeLists.txt  bbinterface.rc
BlackboxZero/plugins/bbInterface_old/: AgentMaster.cpp  AgentMaster.h  AgentType_Mixer.cpp  AgentType_StaticText.cpp  AgentType_Winamp.cpp  ConfigMaster.cpp  MenuMaster.h  Tooltip.cpp
BlackboxZero/plugins/bbKeys/: CMakeLists.txt  bbKeys.cpp
BlackboxZero/plugins/bbLeanBar/: bbLeanBar.cpp  bbLeanClasses.cpp
BlackboxZero/plugins/bbLeanBar+/: BuffBmp.h  CMakeLists.txt  bbLeanBar+.cpp  bbLeanClasses.cpp
BlackboxZero/plugins/bbLeanBar2/: CMakeLists.txt  Doxyfile  LeanBar2.cbp  LeanBar2.layout  bbplusplus.cpp  bbplusplus.h  lbtray.cpp  leanbar.h
BlackboxZero/plugins/bbLeanSkin/: CMakeLists.txt  bbLeanSkin.cpp  exclusions.rc
BlackboxZero/plugins/bbLua/: CMakeLists.txt  bblua.h  bbplugin.cpp  functions.h
BlackboxZero/plugins/bbMuse/: BBmuse.cpp  BBmusePlayer.rc  CMakeLists.txt  Readme.txt  WINAMP_MESSAGES.txt
BlackboxZero/plugins/bbPager/: CMakeLists.txt  Drawing.cpp  Settings.cpp  Settings.h  bbPager.cpp  bbPager.h
BlackboxZero/plugins/bbPlayer/: BBPlayer.cpp  BBPlayerSDK.h  CMakeLists.txt  Makefile  README.txt  for_foobar2000.c  for_foobar2000.cpp  for_lilith.c  for_lilith.cpp  for_winamp.c  for_winamp.cpp  for_winamp.h
BlackboxZero/plugins/bbPlugin/: bbPlugin.cpp  bbPlugin.h  drawico.cpp  sysmenu.cpp  tooltips.cpp  tooltips.h
BlackboxZero/plugins/bbPlugin+/: CMakeLists.txt  moreutils+.cpp
BlackboxZero/plugins/bbRecycleBin/: CMakeLists.txt  bbrecyclebin.cpp
BlackboxZero/plugins/bbSeekBar/: CMakeLists.txt  bbseekbar.cpp  bbseekbar.h  makefile-vctk  readme.txt
BlackboxZero/plugins/bbSetCursors/: CMakeLists.txt  bbplugin.cpp  configfile.cpp  configfile.h  convert.hpp  main.cpp  makefile  registry.cpp  registry.h  stringutils.cpp  stringutils.h  updatecursors.cpp  updatecursors.h
BlackboxZero/plugins/bbSlit/: bbSlit.cpp  bbSlit.rc
BlackboxZero/plugins/bbSystemBarEx/: SystemBarEx.cpp  SystemBarEx.h  bbTooltip.cpp  bbTooltip.h  systembarex.rc
BlackboxZero/plugins/bbTaskSwitch/: BBTaskSwitch.cpp  CMakeLists.txt  Makefile  ts.c  (+8 more)
BlackboxZero/styles/: Meditation.style
(+113 files in other folders)
